// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Reducer init 1`] = `
Object {
  "engagementRecency": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "healthScore": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "spamHits": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
}
`;

exports[`Signals Reducer spam hits fail 1`] = `
Object {
  "engagementRecency": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "healthScore": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "spamHits": Object {
    "data": Array [],
    "error": [Error: Oh no!],
    "loading": false,
    "totalCount": 0,
  },
}
`;

exports[`Signals Reducer spam hits pending 1`] = `
Object {
  "engagementRecency": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "healthScore": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "spamHits": Object {
    "data": Array [],
    "error": null,
    "loading": true,
    "totalCount": 0,
  },
}
`;

exports[`Signals Reducer spam hits success 1`] = `
Object {
  "engagementRecency": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "healthScore": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "totalCount": 0,
  },
  "spamHits": Object {
    "data": Array [
      Object {
        "sending-domain": "example.com",
      },
    ],
    "error": null,
    "loading": false,
    "totalCount": 3,
  },
}
`;
